Update Trix files to fix editor not showing up

--- a/static/css/output.css
+++ b/static/css/output.css
@@ -2671,20 +2671,20 @@ li {
   top: 3.5rem !important;
 }
 @layer base {
-  .blog-content p {
+  .page-content p {
     margin-bottom: 1rem;
   }
-  .blog-content ul {
+  .page-content ul {
     list-style-type: disc;
     padding-left: 1.5rem;
     margin-bottom: 1rem;
   }
-  .blog-content ol {
+  .page-content ol {
     list-style-type: decimal;
     padding-left: 1.5rem;
     margin-bottom: 1rem;
   }
-  .blog-content li {
+  .page-content li {
     margin-bottom: 0.25rem;
   }
 }
